# otame-v2

./: .gitignore  chase.py  fire.py  game.py  game3.py  led_audio_utils.py  main.py  opc.py  otame.py  pyproject.toml  rainbow.py  ripple-main.py  ripple.py  ripple10.py  ripple11.py  ripple12.py  ripple14.py  ripple18.py  ripple2.py  ripple21.py  ripple3.py  ripple6.py  ripple9.py  sound.py  sound2.py  test.py  test2.py  wave.py
audio/: generator.py  manipulator.py
controller/: main_controller.py  state.py
experiments/: sound.py
hardware/: fade_candy_interface.py  pi_interface.py
interaction/: audio_visual_logic.py
mvps/: game2.py  reset.py  ripple-main.py  ripple13.py  ripple15.py  ripple16.py  ripple17.py  ripple19.py  ripple20.py  ripple22.py  ripple23.py  ripple24.py  ripple4.py  ripple5.py  ripple7.py  ripple8.py  stars.py  waveripple.py
utils/: helpers.py
visual/: animator.py
